--- a/js/002/assets/css/style.css
+++ b/js/002/assets/css/style.css
@@ -1,8 +1,25 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none;
 }
 
 canvas{
     display: block;
+}
+
+.btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 100px;
+    display: block;
+    text-align: center;
+    border: none;
+    background: #ccc;
+    border: 1px solid #bbb;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    padding: 10px 0;
+    outline: none;
 }
