--- a/js/003/assets/css/style.css
+++ b/js/003/assets/css/style.css
@@ -4,6 +4,19 @@
     outline: none;
 }
 
+#container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 canvas{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: block;
 }
