--- a/js/004/assets/css/style.css
+++ b/js/004/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     outline: none;
+    font-family:　"Helvetica Neue", "Segoe UI", sans-serif;
 }
 
 #container{
@@ -19,4 +20,50 @@ canvas{
     width: 100%;
     height: 100%;
     display: block;
+}
+
+.circle{
+    position: absolute;
+    top: auto;
+    right: 0;
+    left: 0;
+    bottom: 10%;
+    margin: auto;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 0px solid #fff;
+    color: #fff;
+    pointer-events: none;
+    animation: circle 0.3s 0.6s 1 ease-in-out alternate forwards running;
+}
+.circle__content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+    font-size: 18px;
+    opacity: 0;
+    animation: circle-content 0.3s 0.9s 1 ease-in-out alternate forwards running;
+}
+
+
+@keyframes circle { 
+    0% {
+        border: 0px solid transparent;
+    }
+    100% {  
+        border: 4px solid #fff;
+    }
+}
+
+@keyframes circle-content { 
+    0% {
+        transform: translate(-50%, -20%);
+        opacity: 0;
+    }
+    100% {  
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
 }
